[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/enemies/jester_goblin.png" type="Texture" id=1]
[ext_resource path="res://scripts/enemies/JesterGoblin.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/jester_goblin_spin2.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/jester_goblin_spin1.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 29.788
height = 40.2918

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 180.973, 47.8966 )

[sub_resource type="CapsuleShape2D" id=3]
radius = 41.8011
height = 40.2918

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 3 ) ],
"loop": true,
"name": "Spin",
"speed": 10.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Attacking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 140.219, 59.2853 )

[node name="JesterGoblin" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Left" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left"]
position = Vector2( -218.756, 3.56852 )
shape = SubResource( 4 )

[node name="Right" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right"]
position = Vector2( 214.454, 2.97525 )
shape = SubResource( 4 )

[node name="Area2D" type="Area2D" parent="." groups=["Enemy"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 3.02792e-05, -6.86967 )
shape = SubResource( 3 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -34.0563, -1.26134 )
enabled = true
collision_mask = 3075
collide_with_areas = true

[node name="HurtTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackingTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="Position2D" type="Position2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 5, 5 )
frames = SubResource( 5 )
animation = "Idle"

[node name="ProjectileDetector" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ProjectileDetector"]
position = Vector2( 1.77717, -7.43407 )
shape = SubResource( 6 )

[node name="LeftPos" type="Position2D" parent="."]
position = Vector2( -80, 0 )

[node name="RightPos" type="Position2D" parent="."]
position = Vector2( 80, 0 )

[node name="SpinTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="timeout" from="HurtTimer" to="." method="_on_HurtTimer_timeout"]
[connection signal="timeout" from="AttackingTimer" to="." method="_on_AttackingTimer_timeout"]
[connection signal="area_entered" from="ProjectileDetector" to="." method="_on_ProjectileDetector_area_entered"]
[connection signal="timeout" from="SpinTimer" to="." method="_on_SpinTimer_timeout"]
